# hello-worldz

./: .gitignore  README.md
go/: Dockerfile  README.md  deployment.yaml  go.mod  main.go
java/: .dockerignore  Dockerfile  README.md  deployment.yaml  pom.xml
java/src/main/java/com/example/: HelloWorldApplication.java  HelloWorldController.java
node/: Dockerfile  README.md  deployment.yaml  package.json
python/: .dockerignore  Dockerfile  README.md  deployment.yaml  pyproject.toml
python/hello_world/: main.py
ruby/: Dockerfile  Gemfile  README.md  app.rb  deployment.yaml
